--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,7 +26,7 @@ jobs:
         dotnet-version: '5.0.x'
 
     - name: Install dependencies
-      run: dotnet restore $GITHUB_WORKSPACE/Todo.sln
+      run: nuget restore $GITHUB_WORKSPACE/Todo.sln
 
     - name: Build
       run: |
